--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>selenium-java</artifactId>
             <version>3.141.59</version>
         </dependency>
+        <dependency>
+            <groupId>com.aventstack</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>3.0.1</version>
+        </dependency>
     </dependencies>
 
 </project>
